--- a/_sass/no-margin.scss
+++ b/_sass/no-margin.scss
@@ -8,6 +8,9 @@ body {
     font-size: 1.4em;
     margin: 0;
     width: 100%;
+    transition:
+        color $animationDuration $animationTiming,
+        background-color $animationDuration $animationTiming;
 
     .content {
         min-height: 100vh;
@@ -31,6 +34,12 @@ pre, code {
     margin: 0;
     width: 100%;
     overflow: auto;
+}
+
+.highlighter-rouge {
+    background-color: hsla(var(--background-h), var(--background-s), calc(var(--background-l) - 20%), 50%);
+    padding: 1em;
+    border-radius: $borderRadius;
 }
 
 a {
